# appimage-installer

./: .gitignore  .gitlab-ci.yml  .travis.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt
.travis/: build_appimage-user-tool.sh  build_appimage.sh  build_appimage_user_tools.sh  build_arch_package.sh  build_centos_7_package.sh  build_debian_buster_package.sh  build_opensuse_leap_package.sh  build_ubuntu_bionic_package.sh  build_ubuntu_xenial_package.sh  install_ecm_from_sources.sh  install_kf5attica_from_sources.sh  install_libappimage_from_sources.sh  install_xdg_utils_cxx_from_sources.sh  install_yaml-cpp_from_sources.sh
.travis/arch/: Dockerfile  PKGBUILD  build_package.sh
.travis/centos_7/: Dockerfile  build_package.sh
.travis/debian_buster/: Dockerfile  build_package.sh
.travis/docker/arch/: Dockerfile  PKGBUILD
.travis/docker/centos7/: Dockerfile
.travis/docker/debian:buster/: Dockerfile
.travis/docker/debian_buster/: Dockerfile
.travis/docker/opensuse_leap/: Dockerfile
.travis/docker/ubuntu_bionic/: Dockerfile
.travis/docker/ubuntu_xenial/: Dockerfile
.travis/opensuse_leap/: Dockerfile  build_package.sh
.travis/ubuntu_bionic/: Dockerfile  build_package.sh
cmake/: cpack_deb.cmake  cpack_general.cmake  cpack_rpm.cmake  versioning.cmake
res/: CMakeLists.txt  com.appimagehub.cli.desktop  org.appimage.user-tool-settings.desktop  org.appimage.user-tool.desktop  org.appimage.user_tool.desktop
src/: CMakeLists.txt  Command.h  Config.h  main.cpp  utils.cmake
src/cli/: CMakeLists.txt  Command.h  main.cpp
src/cli/commands/: InstallCommand.cpp  InstallCommand.h  ListCommand.cpp  ListCommand.h  RemoveCommand.cpp  RemoveCommand.h  SearchCommand.cpp  SearchCommand.h  UpdateCommand.cpp  UpdateCommand.h
src/commands/: CMakeLists.txt  GetCommand.cpp  GetCommand.h  InstallCommand.cpp  InstallCommand.h  ListCommand.cpp  ListCommand.h  RemoveCommand.cpp  RemoveCommand.h  SearchCommand.cpp  SearchCommand.h
src/core/: AppsLibrary.cpp  AppsLibrary.h  CMakeLists.txt  Config.cpp  Config.h  Console.cpp  Console.h  Download.cpp  FileDownload.cpp  FileDownload.h  Settings.cpp
src/entities/: Application.h  CMakeLists.txt  Explorer.cpp  Explorer.h
src/gateways/: CMakeLists.txt  Download.cpp  Download.h  FileDownload.cpp  FileDownload.h
src/settings/: CMakeLists.txt  Settings.cpp  Settings.h  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  main.cpp
